--- a/css/category.css
+++ b/css/category.css
@@ -344,6 +344,7 @@ label[for="category-select"]{
 .sp-bt{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .sp-bt1{
     width:80px;
@@ -368,6 +369,7 @@ label[for="category-select"]{
     justify-content: center;
     align-items: center;
     margin-left: auto;
+    /* transition: 0.3s; */
 }
 .sp-bt span{
     font-size: 1.2em;
@@ -383,6 +385,7 @@ label[for="category-select"]{
 }
 .sp-bt div{
     cursor: pointer;
+    transition: 0.3s;
 }
 
 .modal-exit{
@@ -393,4 +396,46 @@ label[for="category-select"]{
     background-size: cover;
     background-repeat: no-repeat;
     filter: opacity(0.4);
+}
+/* 좋아요버튼 */
+.like-bt:hover span{
+    color: pink;
+}
+.like-bt.liked{
+    background-color: pink;   
+    border:2px solid pink;
+}
+.like-bt.liked span{
+    color: white;
+}
+.category-item-con .category-item span{
+    position: absolute;
+    top: 10px; right: 10px;
+    color: pink;
+    transition: 0.3s;
+    display: none;
+}
+
+.category-item-con.liked .category-item span{
+    display: inline;
+}
+
+
+.category-item-con:hover .category-item span{
+    transform: scale(1.3);
+}
+
+
+
+/* 상품 이미지 변경 */
+.sp-pt{
+    transition: 0.3s;
+}
+.sp-mini-pt>div{
+    transition: 0.3s;
+}
+.sp-mini-pt>div:hover{
+    border: 1px solid pink;
+    transform: scale(1.1);
+    cursor: pointer;
 }
