--- a/css/cart.css
+++ b/css/cart.css
@@ -6,7 +6,6 @@
     margin: 0 auto;
     text-align: center;
     width: 80%;
-    /* max-width: 1168px; */
     border-collapse: collapse;
 }
 .cart-tb .cart-cap{
@@ -16,7 +15,7 @@
     padding-left: 0.5em;
     padding-bottom: 0.5em;
     letter-spacing: -0.05em;
-
+    margin-top: 120px;
 }
 .cart-tb .cart-cap2{
     height: 3px;
@@ -28,22 +27,24 @@
     width:3%;
     min-width:65px;
 }
-.cart-tb tr th:nth-child(2){
-}
 .cart-tb tr td:nth-child(2){
     text-align: left;
 }
 .cart-tb tr th:nth-child(3){
-    width:8%;
-    min-width:80px;
+    width:5%;
+    min-width:100px;
 }
 .cart-tb tr th:nth-child(4){
     width:8%;
-    min-width:150px;
+    min-width:100px;
 }
 .cart-tb tr th:nth-child(5){
-    width:13%;
-    min-width:100px;
+    width:8%;
+    min-width:80px;
+}
+.cart-tb tr th:nth-child(6){
+    width:8%;
+    min-width:80px;
 }
 
 .cart-tb th{
@@ -60,12 +61,29 @@
 }
 
 /* 장바구니 상품정보 */
-
+.likedInfo{
+    width:80%;
+    margin: 10px auto;
+    text-align: right;
+}
 .cart-info{
     display: flex;
     align-items: center;
     /* letter-spacing: -0.1em; */
 }
+
+.cart-info div div p{
+    color:gray;
+    font-size: 0.8em;
+}
+tbody span{
+    cursor: pointer;
+    
+}
+tbody span:hover{
+    font-weight: bold;
+}
+
 .cart-pt1{
     width:60px; height: 70px;
     background:lightgray;
@@ -93,8 +111,6 @@
     border-top:2px solid #d2d2d2;
     border-bottom: 2px solid #d2d2d2;
     padding: 1em;
-    /* text-align: right; */
-    /* display:none; */
 }
 .cart-total div:nth-child(2){
     width:65%;    
@@ -115,11 +131,11 @@
 .cart-total div:nth-child(4){
     
 }
-.cart-total div span{
+
+.cart-total div span:last-child{
     margin-top: 2em;
     font-size: 1.3em;
 }
-
 .cart-bt{
     width:200px;
     height:50px;
@@ -157,7 +173,10 @@ td>div>div:nth-child(2){
         width: 90%;
     }
     th, td{
-        font-size:0.8em;
+        font-size: 0.8em;
+    }
+    td span{
+        font-size: 1em;
     }
     td:nth-child(4){
         white-space: nowrap;
@@ -207,5 +226,8 @@ td>div>div:nth-child(2){
     }
     .cart-bt{
         margin:1em auto;
+    }
+    .cart-info>div>div>p{
+        display:none;
     }
 }
