--- a/css/common.css
+++ b/css/common.css
@@ -103,6 +103,7 @@ label[for="burger"]::before{
 .menu-1>li{
     margin: 1.5em;
     font-weight: bold;
+    cursor: default;
 }
 .menu-2>li{
     margin: 0.5em;
@@ -249,7 +250,9 @@ input:focus {
     border-bottom: 1px solid #959595;
     text-align: right;
 }
-
+.menu-2 li label[for="login"]{
+    cursor: pointer;
+}
 
 /* 검색 */
 
@@ -293,7 +296,7 @@ label[for="search"]{
     background-size:70% 70%;
     background-repeat: no-repeat;
     border-radius: 5px;
-    transition: 0.5s;
+    transition: 0.2s;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -307,6 +310,10 @@ label[for="search"]{
 .fig-bg .fig-bt1 div:hover span{
     color:white;
 }
+.fig-bg .fig-bt1 div:active{
+    transform: scale(0.8);
+}
+
 
 
 
