--- a/css/qna.css
+++ b/css/qna.css
@@ -9,6 +9,7 @@
     /* max-width: 1060px; */
     border-bottom: 2px solid #d2d2d2;
     border-collapse: collapse;
+    margin-top: 120px;
 }
 .notice-tb .notice-cap{
     text-align: left;
