--- a/css/community.css
+++ b/css/community.css
@@ -3,7 +3,8 @@
 
 
 .board-tb {
-    margin: 120px auto;
+    margin: 0px auto;
+    margin-top: 120px;
     text-align: center;
     width: 80%;
     border-bottom: 2px solid #d2d2d2;
