--- a/css/signup.css
+++ b/css/signup.css
@@ -1,14 +1,23 @@
 @charset "utf-8";
 @import url('common.css');
 
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 100vh;
+}
 .signup-modal{
     border: 3px solid #555555;
     background:white;
-    width:422px; height: 450px;
+    width:422px; 
     text-align: center;
     position:relative;
+    padding: 3em;
+    margin-top: 120px;
 }
-
 
 .signup-con{
     display: flex;
@@ -18,7 +27,6 @@
 }
 .signup-con h2{
     font-size:1.5em;
-    /* font-weight: bold; */
 }
 .signup-form{
     display: flex;
@@ -32,7 +40,6 @@
 .signup-form div input{
     border: 0px;
     margin: 6px 0;
-    /* font-size: */
 }
 input:focus {
     outline:none;
